# PolyCrawler

./: .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  spec.md
.cursor/rules/: code-quality.mdc  collaborative-workflow.mdc  frontend-workflow.mdc
alembic/: env.py
alembic/versions/: 0001_initial.py
config/: default.yaml  production.yaml
docs/: _index.md  architecture.md
docs/architecture/: component-interfaces.md  document-history.md  project-structure.md
docs/discovery/: clustering.md  new-account-detection.md
docs/execution/: modes.md  paper-fill-model.md
docs/operations/: alerts.md  end-to-end-flow.md  sessions-and-analytics.md
docs/overview/: account-types.md  glossary.md  purpose.md
docs/phases/: _index.md  phase0-bootstrap.md  phase1-manual-seed.md  phase2-parent-watcher.md  phase3a-engine-core.md  phase3b-paper-execution.md  phase4-reconciliation.md  phase5-dashboard-api.md  phase6-backtesting.md  phase7-auto-discovery.md  phase8-live-execution.md
docs/protocols/: entry-rules.md  exit-rules.md  position-state-machine.md  review-and-autonomy.md
docs/reference/: api-routes.md  configuration.md  data-retention.md  database-schema.md  implementation-phases.md  open-questions.md  phase0-complete.md  scripts-and-tooling.md  tech-stack.md  testing-strategy.md
scripts/: dev.ps1  validate_schema.py
src/poly_crawler/: cli.py  main.py
src/poly_crawler/config/: __init__.py  loader.py  schema.py
tests/: conftest.py
tests/fixtures/: __init__.py  labeled_wallets.json  sample_events.json  sample_orderbook.json
(+15 files in other folders)
